// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should not render autofly on load when the experiment bucket is "control" or null 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <ForwardRef(PresenceAvatarList)
    className="presence-avatar-container"
    collaborators={
      Array [
        Object {
          "avatarUrl": "",
          "id": "1",
          "interactedAt": 999,
          "interactionType": "user.item_preview",
          "isActive": false,
          "name": "e",
        },
        Object {
          "avatarUrl": "",
          "id": "2",
          "interactedAt": 999,
          "interactionType": "user.item_upload",
          "isActive": false,
          "name": "d",
        },
        Object {
          "avatarUrl": "",
          "id": "3",
          "interactedAt": 999,
          "interactionType": "user.comment_create",
          "isActive": false,
          "name": "c",
        },
        Object {
          "avatarUrl": "",
          "id": "4",
          "interactedAt": 999,
          "interactionType": "user.item_preview",
          "isActive": false,
          "name": "b",
        },
        Object {
          "avatarUrl": "",
          "id": "5",
          "interactedAt": 999,
          "interactionType": "user.item_upload",
          "isActive": false,
          "name": "a",
        },
      ]
    }
    hideTooltips={false}
    maxAdditionalCollaborators={99}
    maxDisplayedAvatars={3}
    onKeyDown={[Function]}
  />
  <Overlay
    className="presence-overlay presence-autofly"
    shouldDefaultFocus={false}
  >
    <PresenceCollaboratorsList
      collaborators={
        Array [
          Object {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          Object {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          Object {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          Object {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          Object {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
        ]
      }
      experimentBucket="control"
    />
  </Overlay>
</Flyout>
`;

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should not render autofly on load when the experiment bucket is "control" or null 2`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <ForwardRef(PresenceAvatarList)
    className="presence-avatar-container"
    collaborators={
      Array [
        Object {
          "avatarUrl": "",
          "id": "1",
          "interactedAt": 999,
          "interactionType": "user.item_preview",
          "isActive": false,
          "name": "e",
        },
        Object {
          "avatarUrl": "",
          "id": "2",
          "interactedAt": 999,
          "interactionType": "user.item_upload",
          "isActive": false,
          "name": "d",
        },
        Object {
          "avatarUrl": "",
          "id": "3",
          "interactedAt": 999,
          "interactionType": "user.comment_create",
          "isActive": false,
          "name": "c",
        },
        Object {
          "avatarUrl": "",
          "id": "4",
          "interactedAt": 999,
          "interactionType": "user.item_preview",
          "isActive": false,
          "name": "b",
        },
        Object {
          "avatarUrl": "",
          "id": "5",
          "interactedAt": 999,
          "interactionType": "user.item_upload",
          "isActive": false,
          "name": "a",
        },
      ]
    }
    hideTooltips={false}
    maxAdditionalCollaborators={99}
    maxDisplayedAvatars={3}
    onKeyDown={[Function]}
  />
  <Overlay
    className="presence-overlay"
    shouldDefaultFocus={false}
  >
    <PresenceCollaboratorsList
      collaborators={
        Array [
          Object {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          Object {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          Object {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          Object {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          Object {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
        ]
      }
      experimentBucket={null}
    />
  </Overlay>
</Flyout>
`;

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should not render autofly treatment when there are no collaborators to list 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <ForwardRef(PresenceAvatarList)
    className="presence-avatar-container"
    collaborators={Array []}
    hideTooltips={false}
    maxAdditionalCollaborators={99}
    maxDisplayedAvatars={3}
    onKeyDown={[Function]}
  />
  <Overlay
    className="presence-overlay presence-autofly"
    shouldDefaultFocus={false}
  >
    <PresenceCollaboratorsList
      collaborators={Array []}
      experimentBucket="flyout"
    />
    <a
      className="presence-overlay-request-stats"
      href="#"
    >
      <FormattedMessage
        defaultMessage="See all activity"
        id="boxui.presence.previewPresenceFlyoutAccessStatsLink"
      />
    </a>
  </Overlay>
</Flyout>
`;

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should not render autofly treatment when there is no click handler to open the recents panel 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={false}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <ForwardRef(PresenceAvatarList)
    className="presence-avatar-container"
    collaborators={
      Array [
        Object {
          "avatarUrl": "",
          "id": "1",
          "interactedAt": 999,
          "interactionType": "user.item_preview",
          "isActive": false,
          "name": "e",
        },
        Object {
          "avatarUrl": "",
          "id": "2",
          "interactedAt": 999,
          "interactionType": "user.item_upload",
          "isActive": false,
          "name": "d",
        },
        Object {
          "avatarUrl": "",
          "id": "3",
          "interactedAt": 999,
          "interactionType": "user.comment_create",
          "isActive": false,
          "name": "c",
        },
        Object {
          "avatarUrl": "",
          "id": "4",
          "interactedAt": 999,
          "interactionType": "user.item_preview",
          "isActive": false,
          "name": "b",
        },
        Object {
          "avatarUrl": "",
          "id": "5",
          "interactedAt": 999,
          "interactionType": "user.item_upload",
          "isActive": false,
          "name": "a",
        },
      ]
    }
    hideTooltips={false}
    maxAdditionalCollaborators={99}
    maxDisplayedAvatars={3}
    onKeyDown={[Function]}
  />
  <Overlay
    className="presence-overlay presence-autofly"
    shouldDefaultFocus={false}
  >
    <PresenceCollaboratorsList
      collaborators={
        Array [
          Object {
            "avatarUrl": "",
            "id": "1",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "e",
          },
          Object {
            "avatarUrl": "",
            "id": "2",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "d",
          },
          Object {
            "avatarUrl": "",
            "id": "3",
            "interactedAt": 999,
            "interactionType": "user.comment_create",
            "isActive": false,
            "name": "c",
          },
          Object {
            "avatarUrl": "",
            "id": "4",
            "interactedAt": 999,
            "interactionType": "user.item_preview",
            "isActive": false,
            "name": "b",
          },
          Object {
            "avatarUrl": "",
            "id": "5",
            "interactedAt": 999,
            "interactionType": "user.item_upload",
            "isActive": false,
            "name": "a",
          },
        ]
      }
      experimentBucket="flyout"
    />
    <a
      className="presence-overlay-request-stats"
      href="#"
    >
      <FormattedMessage
        defaultMessage="See all activity"
        id="boxui.presence.previewPresenceFlyoutAccessStatsLink"
      />
    </a>
  </Overlay>
</Flyout>
`;

exports[`features/presence/Presence render() Tests for presence autofly - GROWTH-382 AB test should render autofly on load when the experiment bucket is "flyout" 1`] = `
<Flyout
  className="presence "
  closeOnClick={true}
  closeOnClickOutside={true}
  closeOnWindowBlur={false}
  constrainToScrollParent={true}
  constrainToWindow={false}
  isVisibleByDefault={true}
  onClose={[Function]}
  onOpen={[Function]}
  openOnHover={false}
  openOnHoverDelayTimeout={300}
  portaledClasses={Array []}
  position="bottom-left"
>
  <ForwardRef(PresenceAvatarList)
    className="presence-avatar-container"
    collaborators={
      Array [
        Object {
          "avatarUrl": "",
          "id": "1",
          "interactedAt": 999,
          "interactionType": "user.item_preview",
          "isActive": false,
          "name": "e",
        },
        Object {
          "avatarUrl": "",
          "id": "2",
          "interactedAt": 999,
          "interactionType": "user.item_upload",
          "isActive": false,
          "name": "d",
        },
        Object {
          "avatarUrl": "",
          "id": "3",
          "interactedAt": 999,
          "interactionType": "user.comment_create",
          "isActive": false,
          "name": "c",
        },
        Object {
          "avatarUrl": "",
          "id": "4",
          "interactedAt": 999,
          "interactionType": "user.item_preview",
          "isActive": false,
          "name": "b",
        },
        Object {
          "avatarUrl": "",
          "id": "5",
          "interactedAt": 999,
          "interactionType": "user.item_upload",
          "isActive": false,
          "name": "a",
        },
      ]
    }
    hideTooltips={false}
    maxAdditionalCollaborators={99}
    maxDisplayedAvatars={3}
    onKeyDown={[Function]}
  />
  <Overlay
    className="presence-overlay presence-autofly-first-load"
    shouldDefaultFocus={false}
  >
    <FormattedMessage
      defaultMessage="Quickly see who has commented on, edited, or viewed this file."
      id="boxui.presence.previewPresenceFlyoutCopy"
    />
    <Button
      className="btn-primary"
      isLoading={false}
      onClick={[Function]}
      showRadar={false}
      type="submit"
    >
      <FormattedMessage
        defaultMessage="View Recent Activity"
        id="boxui.presence.previewPresenceFlyoutActivityCTA"
      />
    </Button>
  </Overlay>
</Flyout>
`;
